--- a/index.html
+++ b/index.html
@@ -69,7 +69,574 @@
             "id": "arbres",
             "type": "circle",
             "source": "arbres",
-            "source-layer": "arbres"
+            "source-layer": "arbres",
+            'paint': {
+              'circle-radius': {
+                'base': 1.75,
+                'stops': [[12, 2], [22, 180]]
+              },
+              'circle-color': [
+                'match',
+                ['get', 'genre_latin'],
+                "Quercus",
+                "#63b598",
+                "Liquidambar",
+                "#ce7d78",
+                "Fraxinus",
+                "#ea9e70",
+                "Liriodendron",
+                "#a48a9e",
+                "Acer",
+                "#c6e1e8",
+                "Prunus",
+                "#648177",
+                "Platanus",
+                "#0d5ac1",
+                "Malus",
+                "#f205e6",
+                "Tilia",
+                "#1c0365",
+                "Ficus",
+                "#14a9ad",
+                "Alnus",
+                "#4ca2f9",
+                "Pinus",
+                "#a4e43f",
+                "Populus",
+                "#d298e2",
+                "Castanea",
+                "#6119d0",
+                "Fagus",
+                "#d2737d",
+                "Catalpa",
+                "#c0a43c",
+                "Carpinus",
+                "#f2510e",
+                "Betula",
+                "#651be6",
+                "Lagerstroemia",
+                "#79806e",
+                "Acacia",
+                "#61da5e",
+                "Salix",
+                "#cd2f00",
+                "Morus",
+                "#9348af",
+                "Robinia",
+                "#01ac53",
+                "Albizia",
+                "#c5a4fb",
+                "Ligustrum",
+                "#996635",
+                "Magnolia",
+                "#b11573",
+                "Pyrus",
+                "#4bb473",
+                "Picea",
+                "#75d89e",
+                "Chamaerops",
+                "#2f3f94",
+                "Araucaria",
+                "#2f7b99",
+                "Celtis",
+                "#da967d",
+                "Sorbus",
+                "#34891f",
+                "Chamaecyparis",
+                "#b0d87b",
+                "Dracaena",
+                "#ca4751",
+                "Phoenix",
+                "#7e50a8",
+                "Ulmus",
+                "#c4d647",
+                "Ginkgo",
+                "#e0eeb8",
+                "Sophora",
+                "#11dec1",
+                "Aesculus",
+                "#289812",
+                "Sequoia",
+                "#566ca0",
+                "Abies",
+                "#ffdbe1",
+                "Gleditsia",
+                "#2f1179",
+                "Cedrus",
+                "#935b6d",
+                "Cornus",
+                "#916988",
+                "Corylus",
+                "#513d98",
+                "Laurus",
+                "#aead3a",
+                "Cupressus",
+                "#9e6d71",
+                "Chitalpa",
+                "#4b5bdc",
+                "Pterocarya",
+                "#0cd36d",
+                "Koelreuteria",
+                "#250662",
+                "Taxodium",
+                "#cb5bea",
+                "Melia",
+                "#228916",
+                "Ostrya",
+                "#ac3e1b",
+                "Cupressocypa",
+                "#df514a",
+                "Cupressocyparis",
+                "#539397",
+                "Diospiros",
+                "#880977",
+                "Cedrela",
+                "#f697c1",
+                "Cercidiphyllum",
+                "#ba96ce",
+                "Thuja",
+                "#679c9d",
+                "Juglans",
+                "#c6c42c",
+                "Cryptomeria",
+                "#5d2c52",
+                "Calocedrus",
+                "#48b41b",
+                "Ptelea",
+                "#e1cf3b",
+                "Hovenia",
+                "#5be4f0",
+                "Metasequoia",
+                "#57c4d8",
+                "Amelanchier",
+                "#a4d17a",
+                "Cercis",
+                "#225b8a",
+                "Juniperus",
+                "#be608b",
+                "Paulownia",
+                "#96b00c",
+                "Washingtonia",
+                "#088baf",
+                "Olea",
+                "#f158bf",
+                "Tamarix",
+                "#e145ba",
+                "Sequoiadendron",
+                "#ee91e3",
+                "Cydonia",
+                "#05d371",
+                "Mespilus",
+                "#5426e0",
+                "Parrotia",
+                "#4834d0",
+                "Taxus",
+                "#802234",
+                "Zelkova",
+                "#6749e8",
+                "Thujopsis",
+                "#0971f0",
+                "Osmanthus",
+                "#8fb413",
+                "Gymnocladus",
+                "#b2b4f0",
+                "Styrax",
+                "#c3c89d",
+                "Ilex",
+                "#c9a941",
+                "Laburnum",
+                "#41d158",
+                "Eucalyptus",
+                "#fb21a3",
+                "Ailanthus",
+                "#51aed9",
+                "Crataegus",
+                "#5bb32d",
+                "Firmiana",
+                "#807fba",
+                "Diospyros",
+                "#21538e",
+                "Davidia",
+                "#89d534",
+                "Nothofagus",
+                "#d36647",
+                "Phellodendron",
+                "#7fb411",
+                "Cladastris",
+                "#0023b8",
+                "Halesia",
+                "#3b8c2a",
+                "Toona",
+                "#986b53",
+                "Carya",
+                "#f50422",
+                "Phillyrea",
+                "#983f7a",
+                "Viburnum",
+                "#ea24a3",
+                "Eucommia",
+                "#79352c",
+                "Broussonetia",
+                "#521250",
+                "Nyssa",
+                "#c79ed2",
+                "Cinnamomum",
+                "#d6dd92",
+                "Tetradium",
+                "#e33e52",
+                "Sambucus",
+                "#b2be57",
+                "Cladrastis",
+                "#fa06ec",
+                "Ehretia",
+                "#1bb699",
+                "Maclura",
+                "#6b2e5f",
+                "Trachycarpus",
+                "#64820f",
+                "Camellia",
+                "#1c271a",
+                "Sciadopitys",
+                "#21538e",
+                "Eriobotrya",
+                "#89d534",
+                "Arbutus",
+                "#d36647",
+                "Heptacodium",
+                "#7fb411",
+                "Wisteria",
+                "#0023b8",
+                "Vitex",
+                "#3b8c2a",
+                "Asimina",
+                "#986b53",
+                "Syringa",
+                "#f50422",
+                "Parrotiopsis",
+                "#983f7a",
+                "Erythrina",
+                "#ea24a3",
+                "Euptelea",
+                "#79352c",
+                "Sassafras",
+                "#521250",
+                "Larix",
+                "#c79ed2",
+                "Podocarpus",
+                "#d6dd92",
+                "Platycladus",
+                "#e33e52",
+                "Cephalotaxus",
+                "#b2be57",
+                "Pseudotsuga",
+                "#fa06ec",
+                "Acca",
+                "#1bb699",
+                "Sabal",
+                "#6b2e5f",
+                "Jacaranda",
+                "#64820f",
+                "Butia",
+                "#1c271b",
+                "Aphananthe",
+                "#9cb64a",
+                "Phyllostachys",
+                "#996c48",
+                "Allocasuarina",
+                "#9ab9b7",
+                "Pseudosasa",
+                "#06e052",
+                "Chimonanthus",
+                "#e3a481",
+                "Calycanthus",
+                "#0eb621",
+                "Persea",
+                "#fc458e",
+                "Chimonobambusa",
+                "#b2db15",
+                "Bauhinia",
+                "#aa226d",
+                "Euonymus",
+                "#792ed8",
+                "Lindera",
+                "#73872a",
+                "Petteria",
+                "#520d3a",
+                "Wollemia",
+                "#cefcb8",
+                "Photinia",
+                "#a5b3d9",
+                "Bourreria",
+                "#7d1d85",
+                "Aralia",
+                "#c4fd57",
+                "Fontanesia",
+                "#f1ae16",
+                "Escallonia",
+                "#8fe22a",
+                "Bumelia",
+                "#ef6e3c",
+                "Buxus",
+                "#243eeb",
+                "Actinidia",
+                "#1dc18c",
+                "Idesia",
+                "#dd93fd",
+                "Poliothyrsis",
+                "#3f8473",
+                "Cudrania",
+                "#e7dbce",
+                "Cotinus",
+                "#421f79",
+                "Schinus",
+                "#7a3d93",
+                "Sapindus",
+                "#635f6d",
+                "Rhus",
+                "#93f2d7",
+                "Pittosporum",
+                "#9b5c2a",
+                "Poncirus",
+                "#15b9ee",
+                "Manihot",
+                "#0f5997",
+                "Zanthoxylum",
+                "#409188",
+                "Citrus",
+                "#911e20",
+                "Orixa",
+                "#1350ce",
+                "Pistacia",
+                "#10e5b1",
+                "Ziziphus",
+                "#fff4d7",
+                "Elaeagnus",
+                "#cb2582",
+                "Armeniaca",
+                "#ce00be",
+                "Hippophae",
+                "#32d5d6",
+                "Cunninghamia",
+                "#17232a",
+                "Pirus",
+                "#608572",
+                "Evodia",
+                "#c79bc2",
+                "Semiarundinaria",
+                "#00f87c",
+                "Hibiscus",
+                "#77772a",
+                "Clerodendron",
+                "#6995ba",
+                "Libocedrus",
+                "#fc6b57",
+                "Pteroceltis",
+                "#f07815",
+                "Eleagnus",
+                "#8fd883",
+                "Lonicera",
+                "#060e27",
+                "Chionanthus",
+                "#96e591",
+                "Sterculia",
+                "#21d52e",
+                "Pterostyrax",
+                "#d00043",
+                "Rhamnus",
+                "#b47162",
+                "Staphylea",
+                "#1ec227",
+                "Punica",
+                "#4f0f6f",
+                "Sorbopyrus",
+                "#1d1d58",
+                "Poncinos",
+                "#947002",
+                "Gincko",
+                "#bde052",
+                "Gingko",
+                "#e08c56",
+                "Euodia",
+                "#28fcfd",
+                "Juglan",
+                "#bb09bb",
+                "Fruitier",
+                "#36486a",
+                "Tialia",
+                "#d02e29",
+                "Epicea",
+                "#1ae6db",
+                "Cotoneaster",
+                "#3e464c",
+                "Deutzia",
+                "#a84a8f",
+                "Liriodentron",
+                "#911e7e",
+                "Mesplus",
+                "#3f16d9",
+                "X Cupressocyparis",
+                "#0f525f",
+                "Alangium",
+                "#ac7c0a",
+                "Callistemon",
+                "#b4c086",
+                "Crataegomespilus",
+                "#c9d730",
+                "Clerodendrum",
+                "#30cc49",
+                "Torreya",
+                "#3d6751",
+                "Tsuga",
+                "#fb4c03",
+                "Garrya",
+                "#640fc1",
+                "Aronia",
+                "#62c03e",
+                "Hemiptelea",
+                "#d3493a",
+                "X Chitalpa",
+                "#88aa0b",
+                "Laburnocytisus",
+                "#406df9",
+                "Rhododendron",
+                "#615af0",
+                "Luma",
+                "#4be47a",
+                "Abelia",
+                "#2a3434",
+                "Tapiscia",
+                "#4a543f",
+                "Brachychiton",
+                "#79bca0",
+                "Genista",
+                "#a8b8d4",
+                "Fremontodendron",
+                "#00efd4",
+                "Distylium",
+                "#7ad236",
+                "Maackia",
+                "#7260d8",
+                "X Sorbopyrus",
+                "#1deaa7",
+                "Stewartia",
+                "#06f43a",
+                "Platycarya",
+                "#823c59",
+                "Enkianthus",
+                "#e3d94c",
+                "Phyllanthus",
+                "#dc1c06",
+                "Philadelphus",
+                "#f53b2a",
+                "Euscaphis",
+                "#b46238",
+                "Brahea",
+                "#2dfff6",
+                "Carica",
+                "#a82b89",
+                "Xanthoceras",
+                "#1a8011",
+                "Kalopanax",
+                "#436a9f",
+                "Caragana",
+                "#1a806a",
+                "Cordyline",
+                "#4cf09d",
+                "Sycopsis",
+                "#c188a2",
+                "Prunus Maackii Amber Beauty",
+                "#67eb4b",
+                "Tilia Tomentosa",
+                "#b308d3",
+                "Prunus Pandora",
+                "#fc7e41",
+                "Ostria",
+                "#af3101",
+                "Betulus",
+                "#ff065a",
+                "Azara",
+                "#71b1f4",
+                "Staphyllea",
+                "#a2f8a5",
+                "Quercus Robur",
+                "#e23dd0",
+                "Sequioadendron",
+                "#d3486d",
+                "Meleze",
+                "#00f7f9",
+                "Sureau",
+                "#474893",
+                "Malus Toringo Sargentii",
+                "#3cec35",
+                "Nerium",
+                "#1c65cb",
+                "Zizyphus",
+                "#5d1d0c",
+                "Stercularia",
+                "#2d7d2a",
+                "Erythea",
+                "#ff3420",
+                "Jubaea",
+                "#5cdd87",
+                "Copernicia",
+                "#a259a4",
+                "Chorisia",
+                "#e4ac44",
+                "Arecastrum",
+                "#1bede6",
+                "Arbustus",
+                "#8798a4",
+                "Sambuscus",
+                "#d7790f",
+                "Amelanchus",
+                "#b2c24f",
+                "Elaegnus",
+                "#de73c2",
+                "Buddleja",
+                "#d70a9c",
+                "Quercus Rubra",
+                "#25b6a7",
+                "Comus",
+                "#88e9b8",
+                "Firmania",
+                "#c2b0e2",
+                "Cerisier A Fruits",
+                "#86e98f",
+                "Tamaris",
+                "#ae90e2",
+                "Eucomia",
+                "#1a806b",
+                "Castanea ?",
+                "#436a9e",
+                "Lagestromia",
+                "#0ec0ff",
+                "Taiwania",
+                "#f812b3",
+                "Sapium",
+                "#b17fc9",
+                "Cladatris",
+                "#8d6c2f",
+                "Sup",
+                "#d3277a",
+                "Cynodia",
+                "#2ca1ae",
+                "Xcupressocyparis",
+                "#9685eb",
+                "Rosa",
+                "#8a96c6",
+                "Pyracantha",
+                "#dba2e6",
+                "Phyllirea",
+                "#76fc1b",
+                "Prrunus",
+                "#608fa4",
+                "Lagertroemia",
+                "#20f6ba",
+                "Castenea",
+                "#07d7f6",
+                '#000'
+              ]
+            }
           }
         ]
       }
